--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">FC_002</string>
+    <string name="userid_text">User ID</string>
+    <string name="password_subtext">Password</string>
+    <string name="name_hint">Name</string>
+    <string name="forgot_password">Forgot your password?</string>
+    <string name="register_button_text">Register</string>
+    <string name="signin_button_text">Sign In</string>
+    <string name="remember_me">Remember me</string>
+    <string name="uplan_title">UPlan</string>
+    <string name="info_icon_content_description">Information Icon</string>
+    <string name="password_hint">Password</string>
 </resources>
